Date		Added
======
2008/01/05
	* Rev. 12014 Updated Kunlun NPCs and warps. [L0ne_W0lf]
	- Didn't update the Kunlun 'Power' npcs
	- Updated Lutie and Comodo warps.
	* Fixed some slight inconsistencies with the some script headers.
2008/01/01
	* Corrected some delitems in Kyel Hyre Quest. (bugreport:690) [Samuray22]
	* Corrected a Typo error in Yuno NPCs. (bugreport:716)
	* Corrected a Typo error in Novice Training Ground. (bugreport:728)
2007/12/26
	* More official Veins spawns [Playtester]
2007/12/23
	* Fixed a line in eAAC Quest Warper causing crashes. (bugreport:641) [Paradox924X]
2007/12/22
	* Cleaned the script conf files (see topic:171384 for details) [ultramage]
2007/12/16
	* Rev. 11922 Touched up Merchant quest Biliban Kafra function [L0ne_W0lf]
	- Will now return to the previous script execution if all conditions fail.
	* Rev. 11921 Updated Louyang NPCs, quests, and warps. [L0ne_W0lf]
2007/12/14
	* Commited the quick fix "emps not respawning if the emp breaker logs off".
	  (from r11630 bureport:369) [FlavioJS]
2007/12/13
	* Rev. 11906 Maheo in Ice dungeon quest now uses setnpcdisplay. [L0ne_W0lf]
	* Rev. 11905 Minor fixes, guild manager, and a couple others. [L0ne_W0lf]
	- bugreport:579, attempt at fixing bugreport:581
	- Fixed a typo in the hunter quest. (Not noticable really.)
	* Rev. 11903 Updated Ayothaya NPCs, Quests, and Warps. [L0ne_W0lf]
	- Should also fix bugreport:586 (Footprint2 error)
2007/12/11
	* Rev. 11886 Updated Amatsu NPCs, Quests, and Warps. [L0ne_W0lf]
2007/12/09
	* Fixed a bug in r11633 always spawning only 1 chest type [ultramage]
2007/12/08
	* Removed double tabs from mapflag/warp/script/function/duplicate declarations. [FlavioJS]
2007/12/02
	* Rescripted Headgear Quests 1 (Comodo) to Aegis 10.3 Standards. [Samuray22]
	* Corrected a little Typo error in the "Inn". (bugreport:536 & 537)
	* Added Indian RO Children Week Event. Thanks $ephirot
2007/11/30
	* Added Missed Storage Password Function. (bugreport:515) [Samuray22]
2007/11/29